--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.3.0
       with:
-        server: ftp.samkirkland.com
-        username: myFtpUserName
-        password: ${{ secrets.ftp_password }}
+        server: etec199-2020-yancarlos.atwebpages.com
+        username: 3451184_pw3ds
+        password: ${{ secrets.password }}
+        protocol: sftp
+        port: 221
